// Copyright 2023 Gravitational, Inc
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package teleport.mfa.v1;

import "gogoproto/gogo.proto";
import "teleport/legacy/types/types.proto";
import "teleport/legacy/types/webauthn/webauthn.proto";

option go_package = "github.com/gravitational/teleport/api/gen/proto/go/teleport/mfa/v1;mfav1";
option (gogoproto.marshaler_all) = true;
option (gogoproto.unmarshaler_all) = true;

// AuthenticateChallenge is a challenge for all MFA devices registered for a user.
message AuthenticateChallenge {
  // Webauthn credential assertion used for login/authentication ceremonies. Holds a list of allowed credentials (one
  // for each U2F or Webauthn device registered by the user).
  webauthn.CredentialAssertion webauthn_challenge = 1;
  // SSO MFA challenge. If set, the client can go to the IdP redirect URL to perform an MFA check and obtain an MFA
  // token. This token paired with the request id can be used for verification.
  SSOChallenge sso_challenge = 2;
}

// AuthenticateResponse is a response to AuthenticateChallenge using one of the MFA devices registered for a user.
message AuthenticateResponse {
  oneof response {
    // Response to a Webauthn challenge.
    webauthn.CredentialAssertionResponse webauthn = 1;
    // Response to an SSO challenge.
    SSOChallengeResponse sso = 2;
  }
}

// SSOChallenge contains SSO auth request details to perform an SSO MFA check.
message SSOChallenge {
  // ID of an SSO auth request.
  string request_id = 1;
  // IdP redirect URL to initiate the SSO MFA flow.
  string redirect_url = 2;
  // SSO device corresponding to the challenge.
  types.SSOMFADevice device = 3;
}

// SSOChallengeResponse is a response to SSOChallenge.
message SSOChallengeResponse {
  // ID of an SSO auth request.
  string request_id = 1;
  // Secret token used to verify the user's SSO MFA session.
  string token = 2;
}
